# cmake_test_project

./: README.md
glob_srcs/: CMakeLists.txt
glob_srcs/src/: main.c
hello_cmake/: CMakeLists.txt
hello_cmake/src/: main.c
library_test/: CMakeLists.txt
library_test/src/: main.c
library_test/test_library/: CMakeLists.txt  add.c
multiple_files/: CMakeLists.txt
multiple_files/include/: add.h
multiple_files/src/: main.c
